; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-python.c_remove_current_callback.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-python.c_remove_current_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cur_python_cb = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @remove_current_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @remove_current_callback(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @UNUSED_PARAMETER(i32* %5)
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @UNUSED_PARAMETER(i32* %7)
  %9 = load i64, i64* @cur_python_cb, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i64, i64* @cur_python_cb, align 8
  %13 = call i32 @remove_python_obs_callback(i64 %12)
  br label %14

14:                                               ; preds = %11, %2
  %15 = call i32* (...) @python_none()
  ret i32* %15
}

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1

declare dso_local i32 @remove_python_obs_callback(i64) #1

declare dso_local i32* @python_none(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
